src/styles/scss/_responsive.scss
@media screen and (max-height: 900px) {
	body {
		font-size: 13px;
	}
}

// mobile
@media screen and (max-width: 500px) {
	body {
		font-size: 12px;
		overflow-y: auto;
	}

	#interface {
		// min-height: 90vh;
		// padding-bottom: 10vh;

		#quotes_container {
			width: 90vw;

			&.shown {
				min-height: 90px;
				padding-bottom: 30px;
			}
		}

		#linkblocks {
			flex-grow: 0.25;
		}
	}

	#settings {
		right: -100%;
		width: 100%;
		font-size: 1.2em;

		// Tooltip (?) centered when span wrap
		&.all .as_collection {
			max-height: 140px;
			.wrapper span {
				align-items: center;
			}
		}

		input[type='text'] {
			width: 110px;
		}

		.freq_wrap > div,
		input[type='range'],
		select {
			width: 144px;
		}
	}

	#credit {
		width: calc(100% - 7.5em);
		line-height: 14px;
		a,
		p,
		span {
			font-size: 11px;
		}
	}

	#popup {
		flex-wrap: wrap;
		padding: 10% 20%;
		bottom: 0;
		left: 0;
		gap: 0.5em;

		#popup_text,
		#popup_buttons {
			width: 100%;
			margin: 0;
		}

		#popup_buttons {
			flex-direction: row;
			justify-content: space-evenly;
			width: 100%;
			gap: 0.5em;

			a {
				margin: 0;
				width: 100%;
			}
		}
	}

	#editlink_container,
	#bookmarks_container {
		font-size: 14px;
	}

	#bookmarks_container #bookmarks {
		width: 90%;
		min-width: 0;

		form div {
			width: auto;
		}
	}
}

